docs: add button variants component

--- a/apps/docs/src/pages/components/button.mdx
+++ b/apps/docs/src/pages/components/button.mdx
@@ -3,6 +3,8 @@ import { buttonClasses } from "@hitachivantara/uikit-react-core";
 import { Description } from "@docs/components/Description";
 import { Page } from "@docs/components/Page";
 
+import ButtonVariants from "./ButtonVariants";
+
 import { getComponentData } from "../../utils/utils";
 
 export const getStaticProps = async ({ params }) => {
@@ -25,106 +27,22 @@ meta: meta,
 
 ### Variants
 
-```jsx live
-<div
-  style={{
-    display: "grid",
-    gap: 20,
-    gridTemplateColumns: "repeat(3, 140px)",
-  }}
->
-  <HvButton variant="primary">Primary</HvButton>
-  <HvButton variant="primarySubtle">Primary Subtle</HvButton>
-  <HvButton variant="primaryGhost">Primary Ghost</HvButton>
-  <HvButton disabled variant="primary">
-    Primary
-  </HvButton>
-  <HvButton disabled variant="primarySubtle">
-    Primary Subtle
-  </HvButton>
-  <HvButton disabled variant="primaryGhost">
-    Primary Ghost
-  </HvButton>
-  <div />
-  <HvButton variant="secondarySubtle">Secondary Subtle</HvButton>
-  <HvButton variant="secondaryGhost">Secondary Ghost</HvButton>
-  <div />
-  <HvButton variant="secondarySubtle" disabled>
-    Secondary Subtle
-  </HvButton>
-  <HvButton variant="secondaryGhost" disabled>
-    Secondary Ghost
-  </HvButton>
-  <HvButton variant="positive">Positive</HvButton>
-  <HvButton variant="positiveSubtle">Positive Subtle</HvButton>
-  <HvButton variant="positiveGhost">Positive Ghost</HvButton>
-  <HvButton variant="positive" disabled>
-    Positive
-  </HvButton>
-  <HvButton variant="positiveSubtle" disabled>
-    Positive Subtle
-  </HvButton>
-  <HvButton variant="positiveGhost" disabled>
-    Positive Ghost
-  </HvButton>
-  <HvButton variant="warning">Warning</HvButton>
-  <HvButton variant="warningSubtle">Warning Subtle</HvButton>
-  <HvButton variant="warningGhost">Warning Ghost</HvButton>
-  <HvButton variant="warning" disabled>
-    Warning
-  </HvButton>
-  <HvButton variant="warningSubtle" disabled>
-    Warning Subtle
-  </HvButton>
-  <HvButton variant="warningGhost" disabled>
-    Warning Ghost
-  </HvButton>
-  <HvButton variant="negative">Negative</HvButton>
-  <HvButton variant="negativeSubtle">Negative Subtle</HvButton>
-  <HvButton variant="negativeGhost">Negative Ghost</HvButton>
-  <HvButton variant="negative" disabled>
-    Negative
-  </HvButton>
-  <HvButton variant="negativeSubtle" disabled>
-    Negative Subtle
-  </HvButton>
-  <HvButton variant="negativeGhost" disabled>
-    Negative Ghost
-  </HvButton>
-</div>
-```
+<ButtonVariants />
 
 ### Sizes
 
 ```jsx live
 <>
-  <HvButton variant="primary" size="sm">
-    Small
-  </HvButton>
-  <HvButton variant="warningSubtle" size="md">
-    Medium
-  </HvButton>
-  <HvButton variant="positive" size="lg">
-    Large
-  </HvButton>
-  <HvButton icon variant="negativeGhost" size="md" aria-label="Play">
+  <HvButton size="sm">Small</HvButton>
+  <HvButton size="md">Medium</HvButton>
+  <HvButton size="lg">Large</HvButton>
+  <HvButton icon size="md" aria-label="Play">
     <Play />
   </HvButton>
-  <HvButton icon variant="primarySubtle" size="lg" aria-label="Play">
+  <HvButton icon size="lg" aria-label="Play">
     <Play />
   </HvButton>
 </>
-```
-
-### Focusable when disabled
-
-If you still need the button to be focusable when disabled for accessibility purposes, you can set the `focusableWhenDisabled` property to `true`.
-When using this property, the buttons will continue to be read by screen readers when disabled.
-
-```jsx live
-<HvButton disabled focusableWhenDisabled>
-  Primary
-</HvButton>
 ```
 
 ### With icon
@@ -137,67 +55,18 @@ to check the `HvIconButton` component as it wraps the clickable icon with an `Hv
 <div
   style={{
     display: "flex",
-    flexFlow: "column",
+    flexFlow: "row",
     gap: 10,
-    "& > div": {
-      display: "flex",
-      gap: 20,
-    },
   }}
 >
-  <div>
-    <HvButton icon aria-label="Play" variant="primaryGhost">
-      <Play iconSize="M" />
-    </HvButton>
-    <HvButton icon aria-label="Pause">
-      <Pause iconSize="M" />
-    </HvButton>
-    <HvButton icon disabled aria-label="Stop">
-      <Stop iconSize="M" />
-    </HvButton>
-  </div>
-  <div>
-    <HvButton startIcon={<Play />} variant="primaryGhost">
-      Play
-    </HvButton>
-    <HvButton startIcon={<Pause />} variant="secondaryGhost">
-      Pause
-    </HvButton>
-    <HvButton disabled startIcon={<Stop />} variant="secondaryGhost">
-      Stop
-    </HvButton>
-  </div>
-  <div>
-    <HvButton endIcon={<Play />} variant="primaryGhost">
-      Play
-    </HvButton>
-    <HvButton endIcon={<Pause />} variant="secondaryGhost">
-      Pause
-    </HvButton>
-    <HvButton endIcon={<Stop />} disabled variant="secondaryGhost">
-      Stop
-    </HvButton>
-  </div>
-</div>
-```
-
-### Semantic buttons
-
-If you need a button that exists on a semantic container you can set the `variant` prop to `semantic`.
-
-```jsx live
-<div className="flex gap-sm p-sm text-base_dark bg-neutral_20">
-  <HvButton variant="semantic" startIcon={<Favorite />}>
-    Favorite
+  <HvButton startIcon={<Play />} variant="primary">
+    Play
   </HvButton>
-  <HvButton variant="semantic" startIcon={<Refresh />}>
-    Refresh
+  <HvButton endIcon={<Pause />} variant="secondary">
+    Pause
   </HvButton>
-  <HvButton variant="semantic" startIcon={<Delete />}>
-    Delete
-  </HvButton>
-  <HvButton variant="semantic" icon aria-label="More options">
-    <MoreOptionsVertical />
+  <HvButton icon aria-label="Play" variant="primaryGhost">
+    <Play iconSize="XS" />
   </HvButton>
 </div>
 ```
@@ -240,6 +109,38 @@ return (
     </HvButton>
   </div>
 )}
+```
+
+### Semantic buttons
+
+If you need a button that exists on a semantic container you can set the `variant` prop to `semantic`.
+
+```jsx live
+<div className="flex flex-wrap gap-sm p-sm text-base_dark bg-neutral_20">
+  <HvButton variant="semantic" startIcon={<Favorite />}>
+    Favorite
+  </HvButton>
+  <HvButton variant="semantic" startIcon={<Refresh />}>
+    Refresh
+  </HvButton>
+  <HvButton variant="semantic" startIcon={<Delete />}>
+    Delete
+  </HvButton>
+  <HvButton variant="semantic" icon aria-label="More options">
+    <MoreOptionsVertical />
+  </HvButton>
+</div>
+```
+
+### Focusable when disabled
+
+If you still need the button to be focusable when disabled for accessibility purposes, you can set the `focusableWhenDisabled` property to `true`.
+When using this property, the buttons will continue to be read by screen readers when disabled.
+
+```jsx live
+<HvButton disabled focusableWhenDisabled>
+  Primary
+</HvButton>
 ```
 
 </Page>
