chore: add automatic controls type and values retrieval

--- a/apps/docs/src/pages/components/avatar.mdx
+++ b/apps/docs/src/pages/components/avatar.mdx
@@ -32,14 +32,10 @@ meta: meta,
   componentName="HvAvatar"
   controls={{
     size: {
-      type: "select",
-      values: ["xs", "sm", "md", "lg", "xl"],
       defaultValue: "md",
     },
     variant: {
-      type: "select",
-      values: ["circle", "square"],
-      defaultValue: "circle",
+      defaultValue: "circular",
     },
   }}
   componentProps={{ alt: "Beatrice", src: "https://i.imgur.com/bE7vg3N.png" }}
