docs: allow override of default control renderer, add slider

--- a/apps/docs/src/pages/components/avatar.mdx
+++ b/apps/docs/src/pages/components/avatar.mdx
@@ -32,6 +32,7 @@ meta: meta,
   componentName="HvAvatar"
   controls={{
     size: {
+      type: "slider",
       defaultValue: "md",
     },
     variant: {
