--- a/apps/docs/src/pages/components/button.mdx
+++ b/apps/docs/src/pages/components/button.mdx
@@ -40,9 +40,11 @@ meta: meta,
       defaultValue: "primary",
     },
     size: {
+      type: "slider",
       defaultValue: "md",
     },
     radius: {
+      type: "slider",
       defaultValue: "base",
     },
     disabled: {
