--- a/apps/docs/src/pages/components/avatar.mdx
+++ b/apps/docs/src/pages/components/avatar.mdx
@@ -36,6 +36,7 @@ meta: meta,
       defaultValue: "md",
     },
     variant: {
+      type: "radio",
       defaultValue: "circular",
     },
   }}
