--- a/apps/docs/src/pages/components/button.mdx
+++ b/apps/docs/src/pages/components/button.mdx
@@ -13,18 +13,9 @@ import Playground from "./Playground";
 import { getComponentData } from "../../utils/utils";
 
 export const getStaticProps = async ({ params }) => {
-
-const meta = await getComponentData("Button", "core", buttonClasses)
-
-return {
-props: {
-ssg: {
-meta: meta,
-},
-},
-}
-
-}
+  const meta = await getComponentData("Button", "core", buttonClasses);
+  return { props: { ssg: { meta: meta } } };
+};
 
 <Description />
 
@@ -71,7 +62,7 @@ meta: meta,
 </>
 ```
 
-### With icon
+### Icon
 
 Use the `startIcon` or `endIcon` props to insert an icon on the button.
 You can also use an icon directly as a child of the `HvButton` component if you only want a clickable icon. In this case it might be useful
