--- a/apps/docs/src/pages/components/checkBox.mdx
+++ b/apps/docs/src/pages/components/checkBox.mdx
@@ -12,7 +12,12 @@ import Playground from "./Playground";
 import { getComponentData } from "../../utils/utils";
 
 export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("CheckBox", "core", checkBoxClasses);
+  const meta = await getComponentData(
+    "CheckBox",
+    "core",
+    checkBoxClasses,
+    null,
+  );
   return { props: { ssg: { meta: meta } } };
 };
 
