--- a/apps/docs/src/pages/components/checkBox.mdx
+++ b/apps/docs/src/pages/components/checkBox.mdx
@@ -16,7 +16,7 @@ export const getStaticProps = async ({ params }) => {
     "CheckBox",
     "core",
     checkBoxClasses,
-    null,
+    undefined,
   );
   return { props: { ssg: { meta: meta } } };
 };
