--- a/apps/docs/src/pages/components/loadingContainer.mdx
+++ b/apps/docs/src/pages/components/loadingContainer.mdx
@@ -15,7 +15,7 @@ export const getStaticProps = async ({ params }) => {
     "LoadingContainer",
     "core",
     loadingContainerClasses,
-    null,
+    undefined,
   );
   return { props: { ssg: { meta: meta } } };
 };
