--- a/apps/docs/src/pages/components/button.mdx
+++ b/apps/docs/src/pages/components/button.mdx
@@ -13,7 +13,12 @@ import Playground from "./Playground";
 import { getComponentData } from "../../utils/utils";
 
 export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Button", "core", buttonClasses, null);
+  const meta = await getComponentData(
+    "Button",
+    "core",
+    buttonClasses,
+    undefined,
+  );
   return { props: { ssg: { meta: meta } } };
 };
 
