--- a/apps/docs/src/pages/components/loading.mdx
+++ b/apps/docs/src/pages/components/loading.mdx
@@ -8,7 +8,12 @@ import Playground from "./Playground";
 import { getComponentData } from "../../utils/utils";
 
 export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Loading", "core", loadingClasses, null);
+  const meta = await getComponentData(
+    "Loading",
+    "core",
+    loadingClasses,
+    undefined,
+  );
   return { props: { ssg: { meta: meta } } };
 };
 
@@ -80,10 +85,10 @@ export default function Demo() {
 
 ### Loading container
 
-If you need to show a loader over some content, please check the `HvLoadingContainer` component.
+If you need to show a loader over some content, please check the <a href="/components/loadingContainer">`HvLoadingContainer`</a> component.
 
 ### Skeleton loaders
 
-If you need to show a skeleton loader, please check the `HvSkeleton` component.
+If you need to show a skeleton loader, please check the <a href="/components/skeleton">`HvSkeleton`</a> component.
 
 </Page>
