docs: add color control renderer and other minor fixes

--- a/apps/docs/src/pages/components/avatar.mdx
+++ b/apps/docs/src/pages/components/avatar.mdx
@@ -35,8 +35,15 @@ export const getStaticProps = async ({ params }) => {
       type: "radio",
       defaultValue: "circular",
     },
+    color: {
+      type: "color",
+      defaultValue: "atmo1",
+    },
+    backgroundColor: {
+      type: "color",
+      defaultValue: "secondary",
+    },
   }}
-  componentProps={{ alt: "Beatrice", src: "https://i.imgur.com/bE7vg3N.png" }}
 />
 
 ### Image Avatars
