--- a/apps/docs/src/pages/components/loadingContainer.mdx
+++ b/apps/docs/src/pages/components/loadingContainer.mdx
@@ -33,7 +33,7 @@ export const getStaticProps = async ({ params }) => {
       defaultValue: false,
     },
     opacity: {
-      type: "string",
+      type: "text",
       defaultValue: 0.8,
     },
   }}
