docs: add Tag component

--- a/apps/docs/src/pages/components/loading.mdx
+++ b/apps/docs/src/pages/components/loading.mdx
@@ -87,12 +87,9 @@ export default function Demo() {
 }
 ```
 
-### Loading container
+### Related components
 
-If you need to show a loader over some content, please check the <a href="/components/loadingContainer">`HvLoadingContainer`</a> component.
-
-### Skeleton loaders
-
-If you need to show a skeleton loader, please check the <a href="/components/skeleton">`HvSkeleton`</a> component.
+- [`HvLoadingContainer`](/components/loadingContainer)
+- [`HvSkeleton`](/components/skeleton)
 
 </Page>
