docs: style improvements

--- a/apps/docs/src/pages/components/avatar.mdx
+++ b/apps/docs/src/pages/components/avatar.mdx
@@ -1,7 +1,7 @@
 import { avatarClasses, HvAvatar } from "@hitachivantara/uikit-react-core";
 
-import { Description } from "@docs/components/Description";
-import { Page } from "@docs/components/Page";
+import { Description } from "@docs/components/component/Description";
+import { Page } from "@docs/components/component/Page";
 
 import Playground from "./Playground";
 
@@ -20,8 +20,6 @@ export const getStaticProps = async ({ params }) => {
 <Description />
 
 <Page>
-
-### Usage
 
 <Playground
   Component={HvAvatar}
