--- a/apps/docs/src/pages/components/checkBox.mdx
+++ b/apps/docs/src/pages/components/checkBox.mdx
@@ -4,8 +4,8 @@ import {
   theme,
 } from "@hitachivantara/uikit-react-core";
 
-import { Description } from "@docs/components/Description";
-import { Page } from "@docs/components/Page";
+import { Description } from "@docs/components/component/Description";
+import { Page } from "@docs/components/component/Page";
 
 import Playground from "./Playground";
 
@@ -24,8 +24,6 @@ export const getStaticProps = async ({ params }) => {
 <Description />
 
 <Page>
-
-### Usage
 
 <Playground
   Component={HvCheckBox}
