--- a/apps/docs/src/pages/components/loadingContainer.mdx
+++ b/apps/docs/src/pages/components/loadingContainer.mdx
@@ -3,8 +3,8 @@ import {
   loadingContainerClasses,
 } from "@hitachivantara/uikit-react-core";
 
-import { Description } from "@docs/components/Description";
-import { Page } from "@docs/components/Page";
+import { Description } from "@docs/components/component/Description";
+import { Page } from "@docs/components/component/Page";
 
 import Playground from "./Playground";
 
