--- a/apps/docs/src/pages/components/banner.mdx
+++ b/apps/docs/src/pages/components/banner.mdx
@@ -1,8 +1,8 @@
 import { css } from "@emotion/css";
 import { bannerClasses, HvBanner } from "@hitachivantara/uikit-react-core";
 
-import { Description } from "@docs/components/Description";
-import { Page } from "@docs/components/Page";
+import { Description } from "@docs/components/component/Description";
+import { Page } from "@docs/components/component/Page";
 
 import Playground from "./Playground";
 
