--- a/apps/docs/src/pages/components/button.mdx
+++ b/apps/docs/src/pages/components/button.mdx
@@ -5,8 +5,8 @@ import {
   HvSize,
 } from "@hitachivantara/uikit-react-core";
 
-import { Description } from "@docs/components/Description";
-import { Page } from "@docs/components/Page";
+import { Description } from "@docs/components/component/Description";
+import { Page } from "@docs/components/component/Page";
 
 import Playground from "./Playground";
 
@@ -25,8 +25,6 @@ export const getStaticProps = async ({ params }) => {
 <Description />
 
 <Page>
-
-### Variants
 
 <Playground
   Component={HvButton}
@@ -48,7 +46,7 @@ export const getStaticProps = async ({ params }) => {
     },
   }}
 >
-  Test Button
+  Button
 </Playground>
 
 ### Sizes
