--- a/apps/docs/src/pages/components/card.mdx
+++ b/apps/docs/src/pages/components/card.mdx
@@ -1,7 +1,7 @@
 import { cardClasses, HvCard } from "@hitachivantara/uikit-react-core";
 
-import { Description } from "@docs/components/Description";
-import { Page } from "@docs/components/Page";
+import { Description } from "@docs/components/component/Description";
+import { Page } from "@docs/components/component/Page";
 
 import Playground from "./Playground";
 
@@ -18,8 +18,4 @@ export const getStaticProps = async ({ params }) => {
 
 <Description />
 
-<Page>
-
-### Usage
-
-</Page>
+<Page />
