docs(fonts): uniformize OpenSans+Inter usage

--- a/docs/overview/GetStarted.mdx
+++ b/docs/overview/GetStarted.mdx
@@ -56,14 +56,14 @@ and [**theming**](./?path=/docs/guides-theming--docs#theming) documentation.
 
 #### 2. Load the default font
 
-The UI Kit uses **Open Sans** as its default font family since it is the one defined by the Design System specifications. Thus, you'll need to ensure the font
+The UI Kit uses **Open Sans** and **Inter** as its default font families, as defined by the Design System specifications. Thus, you'll need to ensure the font
 is loaded properly since the UI Kit can't do it automatically.
 
 This can be achieved through the **Google Web Fonts CDN** by using the following code inside your project's `<head>` tag:
 
 ```html
 <link
-  href="https://fonts.googleapis.com/css?family=Open+Sans:400,600"
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Open+Sans:wght@400;600&display=swap"
   rel="stylesheet"
 />
 ```
