--- a/packages/core/src/Typography/Usage.mdx
+++ b/packages/core/src/Typography/Usage.mdx
@@ -12,12 +12,12 @@ You will need to ensure that the font link is referenced in your application's c
 
 ### Setup
 
-The **Open Sans font** can be loaded from a CDN, using the following markup:
+The **Open Sans** and **Inter** fonts can be loaded from a CDN, using the following markup:
 
 ```html
 <link
   rel="stylesheet"
-  href="https://fonts.googleapis.com/css?family=Open+Sans:400,600"
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Open+Sans:wght@400;600&display=swap"
 />
 ```
 
